--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "scripts": {
     "test": "node test.js",
-    "build": "echo 'Building... done!'"
+    "build": "echo 'Building... done! sfdsfdsf'"
   }
 }
